--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         <div id="slides__4" class="slide">
           <span class="slide__text">4</span>
           <a class="slide__prev" href="#slides__3" title="Prev"></a>
+          <a class="slide__next" href="#slides__5" title="Next"></a>
+        </div>
+        <div id="slides__5" class="slide">
+          <span class="slide__text">5</span>
+          <a class="slide__prev" href="#slides__4" title="Prev"></a>
           <a class="slide__next" href="#slides__1" title="Prev"></a>
         </div>
       </div>
@@ -37,6 +42,7 @@
         <a class="slider__navlink" href="#slides__2"></a>
         <a class="slider__navlink" href="#slides__3"></a>
         <a class="slider__navlink" href="#slides__4"></a>
+        <a class="slider__navlink" href="#slides__5"></a>
       </div>
     </div>
   </div>
