--- a/index.html
+++ b/index.html
@@ -12,37 +12,72 @@
     <div class="slider">
       <div class="slides">
         <div id="slides__1" class="slide">
-          <span class="slide__text">1</span>
+          <span class="slide__text">
+            <h1>Rocksolid Business</h1>
+            <p>Could include offers like:</p>
+            <ul>
+              <li>Dev-Ops</li>
+              <li>Kubernetes</li>
+            </ul>
+          </span>
           <a class="slide__prev" href="#slides__5" title="Next"></a>
           <a class="slide__next" href="#slides__2" title="Next"></a>
         </div>
         <div id="slides__2" class="slide">
-          <span class="slide__text">2</span>
+          <span class="slide__text">
+            <h1>Business with Sparks</h1>
+            <p>Could include offers like:</p>
+            <ul>
+              <li>Scrum</li>
+            </ul>
+          </span>
           <a class="slide__prev" href="#slides__1" title="Prev"></a>
           <a class="slide__next" href="#slides__3" title="Next"></a>
         </div>
         <div id="slides__3" class="slide">
-          <span class="slide__text">3</span>
+          <span class="slide__text">
+            <h1>Business meets Improv</h1>
+            <p>Could include offers like:</p>
+            <ul>
+              <li>Psychological Safety</li>
+            </ul>
+          </span>
           <a class="slide__prev" href="#slides__2" title="Prev"></a>
           <a class="slide__next" href="#slides__4" title="Next"></a>
         </div>
         <div id="slides__4" class="slide">
-          <span class="slide__text">4</span>
+          <span class="slide__text">
+            <h1>Improv in Business</h1>
+            <p>Could include offers like:</p>
+            <ul>
+              <li>Icebreakers and Activation Games</li>
+            </ul>
+          </span>
           <a class="slide__prev" href="#slides__3" title="Prev"></a>
           <a class="slide__next" href="#slides__5" title="Next"></a>
         </div>
         <div id="slides__5" class="slide">
-          <span class="slide__text">5</span>
+          <span class="slide__text">
+            <h1>Pure Improv</h1>
+            <p>Could include offers like:</p>
+            <ul>
+              <li>Armando Diaz</li>
+              <li>Harold</li>
+              <li>Improvising a Musical</li>
+            </ul>
+          </span>
           <a class="slide__prev" href="#slides__4" title="Prev"></a>
           <a class="slide__next" href="#slides__1" title="Prev"></a>
         </div>
       </div>
       <div class="slider__nav">
+        Rocksolid Business
         <a class="slider__navlink" href="#slides__1"></a>
         <a class="slider__navlink" href="#slides__2"></a>
         <a class="slider__navlink" href="#slides__3"></a>
         <a class="slider__navlink" href="#slides__4"></a>
         <a class="slider__navlink" href="#slides__5"></a>
+        Pure Improvisation
       </div>
     </div>
   </div>
