--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Advance</title>
   <!--<script src="some.js"></script>-->
   <link href="slider.css" rel="stylesheet">
+  <link href="slider-colors.css" rel="stylesheet">
 </head>
 
 <body>
