change slider labels

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
         </div>
       </div>
       <div class="slider__nav">
-        Rocksolid Business
+        More Business
         <a class="slider__navlink" href="#slides__1"></a>
         <a class="slider__navlink" href="#slides__2"></a>
         <a class="slider__navlink" href="#slides__3"></a>
         <a class="slider__navlink" href="#slides__4"></a>
         <a class="slider__navlink" href="#slides__5"></a>
-        Pure Improvisation
+        More Improvisation
       </div>
     </div>
   </div>
