slide with gradient

--- a/index.html
+++ b/index.html
@@ -72,13 +72,15 @@
         </div>
       </div>
       <div class="slider__nav">
-        More Business
-        <a class="slider__navlink" href="#slides__1"></a>
-        <a class="slider__navlink" href="#slides__2"></a>
-        <a class="slider__navlink" href="#slides__3"></a>
-        <a class="slider__navlink" href="#slides__4"></a>
-        <a class="slider__navlink" href="#slides__5"></a>
-        More Improvisation
+        <span class="slider__label">More Business</span>
+        <div class="slider__pages">
+          <a class="slider__navlink" href="#slides__1"></a>
+          <a class="slider__navlink" href="#slides__2"></a>
+          <a class="slider__navlink" href="#slides__3"></a>
+          <a class="slider__navlink" href="#slides__4"></a>
+          <a class="slider__navlink" href="#slides__5"></a>
+        </div>
+        <span class="slider__label">More Improvisation</span>
       </div>
     </div>
   </div>
