--- a/index.html
+++ b/index.html
@@ -71,16 +71,19 @@
           <a class="slide__next" href="#slides__1" title="Prev"></a>
         </div>
       </div>
-      <div class="slider__nav">
-        <span class="slider__label">More Business</span>
-        <div class="slider__pages">
-          <a class="slider__navlink" href="#slides__1"></a>
-          <a class="slider__navlink" href="#slides__2"></a>
-          <a class="slider__navlink" href="#slides__3"></a>
-          <a class="slider__navlink" href="#slides__4"></a>
-          <a class="slider__navlink" href="#slides__5"></a>
+      <div class="slider__controls">
+        <div class="slider__nav">
+          <span class="slider__label">Mehr Business</span>
+          <div class="slider__pages">
+            <a class="slider__navlink" href="#slides__1"></a>
+            <a class="slider__navlink" href="#slides__2"></a>
+            <a class="slider__navlink" href="#slides__3"></a>
+            <a class="slider__navlink" href="#slides__4"></a>
+            <a class="slider__navlink" href="#slides__5"></a>
+          </div>
+          <span class="slider__label">Mehr Improvisation</span>
         </div>
-        <span class="slider__label">More Improvisation</span>
+        <div class="slider__poke">&lt;---&gt;</div>
       </div>
     </div>
   </div>
