added trainer stub

--- a/index.html
+++ b/index.html
@@ -3,19 +3,30 @@
 <head>
   <meta charset="utf-8">
   <title>Advance</title>
-  <!--<script src="some.js"></script>-->
   <link href="slider.css" rel="stylesheet">
   <link href="slider-colors.css" rel="stylesheet">
+  <link href="trainer.css" rel="stylesheet">
 </head>
 
 <body>
+  <div class="trainer">
+    <h1>Der Trainer</h1>
+    <p>
+      <img src="media/coach.JPG"/>
+      Johannes Kahlhöfer begann seine Karriere als IT-Berater in der Software-Entwicklung. Seine Art die bestehenden
+      Systeme in Frage zu stellen, brachten ihn somit zur Agilität, Scrum, Lean, etc. In Folge dessen wechselte er in
+      die methodischen Beratung – in die Rolle des Scrum Masters und agilen Coaches mehrerer Teams. Die Verbindung mit
+      der Improvisation kommt dabei sowohl implizit als auch explizit im Kundenkontakt zum Einsatz. Von der
+      Auftragsklärung, über Workshops bis in die Köpfe der Kunden hinein… denn wer nicht agil kann, hat schon verloren.
+    </p>
+  </div>
   <div class="slider-container">
     <div class="slider">
       <div class="slides">
         <div id="slides__1" class="slide">
           <span class="slide__text">
             <h1>Rocksolid Business</h1>
-            <p>Could include offers like:</p>
+            <p>Workshops:</p>
             <ul>
               <li>Dev-Ops</li>
               <li>Kubernetes</li>
@@ -27,7 +38,7 @@
         <div id="slides__2" class="slide">
           <span class="slide__text">
             <h1>Business with Sparks</h1>
-            <p>Could include offers like:</p>
+            <p>Workshops:</p>
             <ul>
               <li>Scrum</li>
             </ul>
@@ -38,7 +49,7 @@
         <div id="slides__3" class="slide">
           <span class="slide__text">
             <h1>Business meets Improv</h1>
-            <p>Could include offers like:</p>
+            <p>Workshops:</p>
             <ul>
               <li>Psychological Safety</li>
             </ul>
@@ -49,7 +60,7 @@
         <div id="slides__4" class="slide">
           <span class="slide__text">
             <h1>Improv in Business</h1>
-            <p>Could include offers like:</p>
+            <p>Workshops:</p>
             <ul>
               <li>Icebreakers and Activation Games</li>
             </ul>
@@ -60,7 +71,7 @@
         <div id="slides__5" class="slide">
           <span class="slide__text">
             <h1>Pure Improv</h1>
-            <p>Could include offers like:</p>
+            <p>Workshops:</p>
             <ul>
               <li>Armando Diaz</li>
               <li>Harold</li>
