slider poke change

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </div>
           <span class="slider__label">Mehr Improvisation</span>
         </div>
-        <div class="slider__poke">&lt;---&gt;</div>
+        <div class="slider__poke">&harr;</div>
       </div>
     </div>
   </div>
