move trainer into slider

--- a/index.html
+++ b/index.html
@@ -5,28 +5,27 @@
   <title>Advance</title>
   <link href="slider.css" rel="stylesheet">
   <link href="slider-colors.css" rel="stylesheet">
-  <link href="trainer.css" rel="stylesheet">
+  <link href="slides.css" rel="stylesheet">
 </head>
 
 <body>
-  <div class="trainer">
-    <h1>Der Trainer</h1>
-    <p>
-      <img src="media/coach.JPG"/>
-      Johannes Kahlhöfer begann seine Karriere als IT-Berater in der Software-Entwicklung. Seine Art die bestehenden
-      Systeme in Frage zu stellen, brachten ihn somit zur Agilität, Scrum, Lean, etc. In Folge dessen wechselte er in
-      die methodischen Beratung – in die Rolle des Scrum Masters und agilen Coaches mehrerer Teams. Die Verbindung mit
-      der Improvisation kommt dabei sowohl implizit als auch explizit im Kundenkontakt zum Einsatz. Von der
-      Auftragsklärung, über Workshops bis in die Köpfe der Kunden hinein… denn wer nicht agil kann, hat schon verloren.
-    </p>
-  </div>
   <div class="slider-container">
     <div class="slider">
       <div class="slides">
         <div id="slides__1" class="slide">
           <span class="slide__text">
             <h1>Rocksolid Business</h1>
-            <p>Workshops:</p>
+            <h2>Der Trainer</h2>
+            <div class="trainer">
+              <img src="media/coach.JPG"/>
+              <p>
+                Johannes Kahlhöfer begann seine Karriere als IT-Berater in der Software-Entwicklung. Seine Art die bestehenden
+                Systeme in Frage zu stellen, brachten ihn somit zur Agilität, Scrum, Lean, etc. In Folge dessen wechselte er in
+                die methodischen Beratung – in die Rolle des Scrum Masters und agilen Coaches mehrerer Teams. Die Verbindung mit
+                der Improvisation kommt dabei sowohl implizit als auch explizit im Kundenkontakt zum Einsatz. Von der
+                Auftragsklärung, über Workshops bis in die Köpfe der Kunden hinein… denn wer nicht agil kann, hat schon verloren.
+              </p>
+            </div>
             <ul>
               <li>Dev-Ops</li>
               <li>Kubernetes</li>
