slide texts and very simple layout

--- a/index.html
+++ b/index.html
@@ -15,21 +15,29 @@
         <div id="slides__1" class="slide">
           <span class="slide__text">
             <h1>Rocksolid Business</h1>
-            <h2>Der Trainer</h2>
             <div class="trainer">
-              <img src="media/coach.JPG"/>
+              <h2>Der Trainer</h2>
+              <img src="media/coach.JPG" />
               <p>
-                Johannes Kahlhöfer begann seine Karriere als IT-Berater in der Software-Entwicklung. Seine Art die bestehenden
-                Systeme in Frage zu stellen, brachten ihn somit zur Agilität, Scrum, Lean, etc. In Folge dessen wechselte er in
-                die methodischen Beratung – in die Rolle des Scrum Masters und agilen Coaches mehrerer Teams. Die Verbindung mit
-                der Improvisation kommt dabei sowohl implizit als auch explizit im Kundenkontakt zum Einsatz. Von der
-                Auftragsklärung, über Workshops bis in die Köpfe der Kunden hinein… denn wer nicht agil kann, hat schon verloren.
+                Bereits in seiner Bachelor-Thesis seines Medieninformatik Studiums in Stuttgart, beschäftige sich
+                Johannes Kahlhöfer mit der Orchestrierung von Services in Kubernetes.
+                Im Laufe seiner IT-Karriere baute er diverse Cluster für Kunden auf. Von Cloud Lösungen bis Raspberry-Pi
+                war alles dabei.
+                Als Fullstack-Entwickler legt Johannes sehr großen Wert auf Prozesse und Arbeitsumgebungen, die
+                unterstützend und beschleunigend wirken.
+                Deshalb sind für ihn automatisierte Build und Rollout Prozesse (CI/CD), sowie Monitoring und Logging ein
+                absolutes Must-Have.
+                Nur so können unerwünschte Effekte erkannt, behoben und die Verbesserung schnellstmöglich ausgerollt
+                werden.
               </p>
             </div>
-            <ul>
-              <li>Dev-Ops</li>
-              <li>Kubernetes</li>
-            </ul>
+            <div class="trainings">
+              <h2>Die Trainings</h2>
+              <ul>
+                <li>Dev-Ops</li>
+                <li>Kubernetes</li>
+              </ul>
+            </div>
           </span>
           <a class="slide__prev" href="#slides__5" title="Next"></a>
           <a class="slide__next" href="#slides__2" title="Next"></a>
@@ -37,10 +45,27 @@
         <div id="slides__2" class="slide">
           <span class="slide__text">
             <h1>Business with Sparks</h1>
-            <p>Workshops:</p>
-            <ul>
-              <li>Scrum</li>
-            </ul>
+            <div class="trainer">
+              <h2>Der Trainer</h2>
+              <img src="media/coach.JPG" />
+              <p>
+                Johannes Kahlhöfer begann seine Karriere als IT-Berater in der Software-Entwicklung. Seine Art die
+                bestehenden
+                Systeme in Frage zu stellen, brachten ihn somit zur Agilität, Scrum, Lean, etc. In Folge dessen
+                wechselte er in
+                die methodischen Beratung – in die Rolle des Scrum Masters und agilen Coaches mehrerer Teams. Die
+                Verbindung mit
+                der Improvisation kommt dabei sowohl implizit als auch explizit im Kundenkontakt zum Einsatz. Von der
+                Auftragsklärung, über Workshops bis in die Köpfe der Kunden hinein… denn wer nicht agil kann, hat schon
+                verloren.
+              </p>
+            </div>
+            <div class="trainings">
+              <h2>Die Trainings</h2>
+              <ul>
+                <li>Scrum</li>
+              </ul>
+            </div>
           </span>
           <a class="slide__prev" href="#slides__1" title="Prev"></a>
           <a class="slide__next" href="#slides__3" title="Next"></a>
@@ -48,10 +73,26 @@
         <div id="slides__3" class="slide">
           <span class="slide__text">
             <h1>Business meets Improv</h1>
-            <p>Workshops:</p>
-            <ul>
-              <li>Psychological Safety</li>
-            </ul>
+            <div class="trainer">
+              <h2>Der Trainer</h2>
+              <img src="media/coach.JPG" />
+              <p>
+                Wie schaffen es manche Projekte in atemberaubenden Tempo voranzuschreiten, während andere sich in
+                Meetingräumen verlieren?
+                Was macht diese Teams so erfolgreich? Wie schaffen sie es ihre Kunden mit ihrem Produkt immer wieder zu
+                begeistern?
+                In der Zeit von Knowledge Workern (oder auch Servant Leadership) liegt der Erfolgsfaktor darin, ob sich
+                die Mitglieder eines Teams voll einbringen können.
+                Fehler erkannt, benannt und aus ihnen gelernt wird.
+                Unfertige Ideen gemeinsam zum nächsten Killer-Feature werden.
+              </p>
+            </div>
+            <div class="trainings">
+              <h2>Die Trainings</h2>
+              <ul>
+                <li>Psychological Safety</li>
+              </ul>
+            </div>
           </span>
           <a class="slide__prev" href="#slides__2" title="Prev"></a>
           <a class="slide__next" href="#slides__4" title="Next"></a>
@@ -59,10 +100,21 @@
         <div id="slides__4" class="slide">
           <span class="slide__text">
             <h1>Improv in Business</h1>
-            <p>Workshops:</p>
-            <ul>
-              <li>Icebreakers and Activation Games</li>
-            </ul>
+            <div class="trainer">
+              <h2>Der Trainer</h2>
+              <img src="media/coach.JPG" />
+              <p>
+                Seit 2014 konzipiert Johannes Kahlhöfer Workshops im Kontext des Improvisationstheaters.
+                Besonders spannend für ihn ist dabei der passende Fit von Aufwärm- bzw. Aktivierungsübungen zum Thema
+                der Session.
+              </p>
+            </div>
+            <div class="trainings">
+              <h2>Die Trainings</h2>
+              <ul>
+                <li>Icebreakers and Activation Games</li>
+              </ul>
+            </div>
           </span>
           <a class="slide__prev" href="#slides__3" title="Prev"></a>
           <a class="slide__next" href="#slides__5" title="Next"></a>
@@ -70,12 +122,30 @@
         <div id="slides__5" class="slide">
           <span class="slide__text">
             <h1>Pure Improv</h1>
-            <p>Workshops:</p>
-            <ul>
-              <li>Armando Diaz</li>
-              <li>Harold</li>
-              <li>Improvising a Musical</li>
-            </ul>
+            <div class="trainer">
+              <h2>Der Trainer</h2>
+              <img src="media/coach.JPG" />
+              <p>
+                Johannes hat aus Versehen mit Improtheater angefangen, doch es war Liebe auf den ersten Blick.
+                Seitdem absorbiert er alles und jeden Style, der damit in Verbindung steht, ganz egal ob zu Hause mit
+                Büchern, in Deutschland, der EU oder in den USA (Chicago).
+                Gewissermaßen ein wandelndes Lexikon.
+                Beim Spielen hat er den meisten Spaß daran, seine Mitspieler*Innen ein bisschen zu sticheln und kleinen
+                Unfug auf der Bühne zu veranstalten.
+                In seinen Workshops wird oft gegen Regeln rebelliert und die Teilnehmenden gefordert, um ihr Repertoire
+                zu erweitern.
+                Ansonsten ist er immer wieder auch in fertigen Musicals auf der Bühne zu sehen und kennt dadurch den
+                Musical Flair sehr gut.
+              </p>
+            </div>
+            <div class="trainings">
+              <h2>Die Trainings</h2>
+              <ul>
+                <li>Armando Diaz</li>
+                <li>Harold</li>
+                <li>Improvising a Musical</li>
+              </ul>
+            </div>
           </span>
           <a class="slide__prev" href="#slides__4" title="Prev"></a>
           <a class="slide__next" href="#slides__1" title="Prev"></a>
