move colors to separate css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Advance</title>
   <link href="slider.css" rel="stylesheet">
-  <link href="slider-colors.css" rel="stylesheet">
+  <link href="colors.css" rel="stylesheet">
   <link href="slides.css" rel="stylesheet">
 </head>
 
