continue on psych-safety and link in main page

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="trainings">
               <h2>Die Trainings</h2>
               <ul>
-                <li>Psychological Safety</li>
+                <li><a href="psychological-safety.html">Psychologische Sicherheit</a></li>
               </ul>
             </div>
           </span>
