--- a/psychological-safety.html
+++ b/psychological-safety.html
@@ -10,10 +10,34 @@
 <body class="both">
   <div class="wrapper">
     <div class="header">
-      <h1>Psychological Safety</h1>
+      <h1>Psychologische Sicherheit // Psychological Safety</h1>
     </div>
     <div class="content">
-      
+      <h2>Wieso ist psychologische Sicherheit wichtig?</h2>
+      <p>
+        Mehr und mehr Teamarbeit muss in dynamischen Umgebungen geleistet werden.
+        Die Konstellation der Teammitglieder ändert sich konstant im Gegensatz zu fest definierten Teamgrenzen.
+        Diese dynamische Kollaboration erfordert Kommunikation und Koordination trotz vielfältiger Unterschiede in den
+        Bereichen Expertise, Status und Distanz.
+        In jeder wissensbasierten Organisation und insbesondere solche, die Expert*Innen-Wissen aus diversen Feldern zusammenbringen müssen, ist psychologische Sicherheit eine Voraussetzung für Erfolg.
+      </p>
+      <p class="in-short">
+        In Short: Für jede Firma, die zum Wachsen auf "Wissen und Kollaboration zur Innovation" setzt, ist das Aufbauen einer Kultur psychologischer Sicherheit nicht länger eine Frage des "ob".
+      </p>
+      <h2>Was ist psychologische Sicherheit?</h2>
+      <p>
+        Der Begriff stammt von Amy C. Edmondson, die bereits seit mehreren Jahrzehnten in Organisationen Teams beobachtet hat, um festzustellen welche Faktoren Einfluss auf die Teamperformance haben.
+        Bei ihrer ersten Studie (in einem Krankenhaus) wurde sie bei der Auswertung durch die Statistik überrascht.
+        Es bestand ein Zusammenhang zwischen Fehlerrate und Effektivität der Teams. 
+        Jedoch anders als erwartet. 
+        Effektive Teams wiesen eine höhere Fehlerrate auf.
+        Der Grund dafür lag darin, dass die effektiven Teams mehr Fehler meldeten.
+        Diese Teams hatten eine Kultur etabliert, bei denen aus Fehlern gelernt werden konnte. 
+        Wo Rückfragen und Anmerkungen erwünscht sind und zu kontinuierlichem Lernen führen -> Wiederum fruchtbarer Boden führ Innovationen.
+      </p>
+      <p class="in-short">
+        In Short: Eine Kultur in der niemand das Recht hat eine kritische Meinung zu haben, ohne sie auch zu äußern.
+      </p>
     </div>
   </div>
 </body>
