stub text psych safe

--- a/psychological-safety.html
+++ b/psychological-safety.html
@@ -38,6 +38,17 @@
       <p class="in-short">
         In Short: Eine Kultur in der niemand das Recht hat eine kritische Meinung zu haben, ohne sie auch zu äußern.
       </p>
+      <h2>Wie wirkt sich psychologischer Sicherheit im Team aus?</h2>
+      <p>
+        textextext
+      </p>
+      <p class="in-short">
+        In Short: kurz.
+      </p>
+      <h1>Unser Training</h1>
+      <p>Bekannt, steht in Büchern, Frage der Übung, Ausprobieren und erfahren</p>
+      <p>Spiele, Reflektieren, Theorie, Anwendung</p>
+      <p>geil. kauf ich</p>
     </div>
   </div>
 </body>
