back btn psych safe

--- a/psychological-safety.html
+++ b/psychological-safety.html
@@ -10,6 +10,7 @@
 <body class="both">
   <div class="wrapper">
     <div class="header">
+      <a href="index.html#slides__3">&lt; zurück</a>
       <h1>Psychologische Sicherheit // Psychological Safety</h1>
     </div>
     <div class="content">
