progress on psych safety page

--- a/psychological-safety.html
+++ b/psychological-safety.html
@@ -39,17 +39,25 @@
       <p class="in-short">
         In Short: Eine Kultur in der niemand das Recht hat eine kritische Meinung zu haben, ohne sie auch zu äußern.
       </p>
-      <h2>Wie wirkt sich psychologischer Sicherheit im Team aus?</h2>
+      <h2>Wie wirkt sich psychologische Sicherheit im Team aus?</h2>
       <p>
-        textextext
+        <ul>
+          <li>Lernen aus Fehlern</li>
+          <li>Mehr Mitarbeiter*Innen Engagement, da Input erwünscht und gefordert</li>
+          <li>Innovation durch die Knowledge Workers</li>
+          <li>Höhere Qualität</li>
+          <li>Höhere Zufriedenheit der Mitarbeiter*Innen</li>
+          <li>Basis für High Performance Arbeit</li>
+          <li>Konter gegen die ersten zwei der "Five Dysfunctions of a team"</li>
+        </ul>
       </p>
       <p class="in-short">
-        In Short: kurz.
+        In Short: Erst durch psychologische Sicherheit kann ein Team überhaupt effizient sein.
       </p>
       <h1>Unser Training</h1>
       <p>Bekannt, steht in Büchern, Frage der Übung, Ausprobieren und erfahren</p>
       <p>Spiele, Reflektieren, Theorie, Anwendung</p>
-      <p>geil. kauf ich</p>
+      <p><button class="buy">geil. kauf ich</button></p>
     </div>
   </div>
 </body>
